# fastapi-traefik

./: .dockerignore  Dockerfile  docker-compose.traefik.yml  docker-compose.yml  panel.dockerfile  pyproject.toml
app/: main.py
