[tool.poetry]
name = "traefik"
version = "0.1.0"
description = ""
authors = ["Sirish Kumar Bethala <sirish-kumar.bethala@bmw.de>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

